// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example build input type 1`] = `
"/**
 * Code generated by github.com/macoolka/macoolka-gen-model, DO NOT EDIT.
 */
export interface NonEmptyArray<A> extends Array<A> {
  0: A
}

export type MaybeArray<A> = A | Array<A>

/**
 * @since 0.2.0
 */
/**
 * @since 0.2.0
 */
export interface User {
  /**
   * @since 0.2.0
   */
  name: string
  /**
   * @since 0.2.0
   */
  id: string
  /**
   * @since 0.2.0
   */
  age?: number
  /**
   * @since 0.2.0
   */
  female?: boolean
  /**
   * @since 0.2.0
   */
  city?: 'dalian' | 'london' | 'newyork' | 'beijing'
}
"
`;

exports[`example build type 1`] = `
"/**
 * Code generated by github.com/macoolka/macoolka-gen-model, DO NOT EDIT.
 */
export interface NonEmptyArray<A> extends Array<A> {
  0: A
}

export type MaybeArray<A> = A | Array<A>

/**
 * @since 0.2.0
 */
/**
 * @since 0.2.0
 */
export interface User {
  /**
   * @since 0.2.0
   */
  name: string
  /**
   * @since 0.2.0
   */
  id: string
  /**
   * @since 0.2.0
   */
  age?: number
  /**
   * @since 0.2.0
   */
  female?: boolean
  /**
   * @since 0.2.0
   */
  city: 'dalian' | 'london' | 'newyork' | 'beijing'
}
"
`;

exports[`example build valid io 1`] = `
"/**
 * Code generated by github.com/macoolka/macoolka-gen-model, DO NOT EDIT.
 */
import * as t from 'macoolka-io'
/**
 * @since 0.2.0
 */
export const User = t.intersection([
  t.type({
    /**
     * @since 0.2.0
     */
    name: t.string,
    /**
     * @since 0.2.0
     */
    id: t.string,
    /**
     * @since 0.2.0
     */
    city: t.withDefault(t.keyof({ dalian: '', london: '', newyork: '', beijing: '' }), 'dalian')
  }),
  t.partial({
    /**
     * @since 0.2.0
     */
    age: t.int,
    /**
     * @since 0.2.0
     */
    female: t.boolean
  })
])
"
`;
